--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/3903738" target="_blank">11일</a> - <a href="https://youtu.be/DO126xepbow" target="_blank">빼빼로 먹고 싶은 날 (팬게임 - 빼빼로데이 게임 , 리그 오브 레전드 - 배치)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3908093" target="_blank">12일</a> - <a href="https://youtu.be/8gmwGoaLqbk" target="_blank">오늘부터 2일..?? (롯데월드 면접가리 , 풀버전아님 이후 애니송 월드컵은 챤튜브에서)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3912086" target="_blank">13일</a> - </a href="" target="_blank">토요노가리!!!!!!!!!!!!!</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3916703" target="_blank">14일</a> - <a href="https://youtu.be/5NwSciNAjPk" target="_blank">느긋한 일요일~ (리그 오브 레전드 - 승급전 , 흑역사 토컨</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3916703" target="_blank">14일</a> - <a href="https://youtu.be/5NwSciNAjPk" target="_blank">느긋한 일요일~ (리그 오브 레전드 - 승급전 , 흑역사 토컨)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3919977" target="_blank">15일</a> - <a href="https://youtu.be/PR0FoPq43dU" target="_blank">짧 (과거 커버곡 가리 , 일식 노가리 , 노래 부르는 법 강의 , 무지성 노래뱅 , 엔딩곡 - 어푸)</a></ul>
         <ul></a href="" target="_blank">16일</a> - </a href="" target="_blank">모두의 TTS 녹음</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3935424" target="_blank">17일</a> - <a href="https://youtu.be/mc8JUBiVtkw" target="_blank">마인킹래프트 (리그 오브 레전드 , 마인크래프트 - 추노2 , 마인크래프트 - 연말 맵 만들기)</a></ul>
         <ul></a href="" target="_blank">19일</a> - </a href="" target="_blank">새벽 왕수다</a></ul>
-        <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/nOqQJhqWFE4" target="_blank">일식먹고 VR (우타이테 노가리</a></ul>
-        <ul></a href="" target="_blank">19일</a> - </a href="" target="_blank">귀신이된 비챤</a></ul>
+        <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/nOqQJhqWFE4" target="_blank">일식먹고 VR (우타이테 노가리 , 리그 오브 레전드 , VRChat 풀트뱅 , 애기뺑띠) </a></ul>
+        <ul></a href="" target="_blank">19일</a> - </a href="" target="_blank">귀신이된 비챤▲ (00:12:00~00:24:00까지 뮤트)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3947796" target="_blank">21일</a> - </a href="" target="_blank">두둥등장</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - </a href="" target="_blank">등챤</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3959711" target="_blank">24일</a> - </a href="" target="_blank">급뱅온선언</a></ul>
