--- a/index233.html
+++ b/index233.html
@@ -75,7 +75,7 @@
         <ul><a href="https://cafe.naver.com/steamindiegame/3935424" target="_blank">17일</a> - <a href="https://youtu.be/mc8JUBiVtkw" target="_blank">마인킹래프트 (리그 오브 레전드 , 마인크래프트 - 추노2 , 마인크래프트 - 연말 맵 만들기)</a></ul>
         <ul></a href="" target="_blank">19일</a> - </a href="" target="_blank">새벽 왕수다</a></ul>
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/nOqQJhqWFE4" target="_blank">일식먹고 VR (우타이테 노가리 , 리그 오브 레전드 , VRChat 풀트뱅 , 애기뺑띠) </a></ul>
-        <ul></a href="" target="_blank">19일</a> - </a href="" target="_blank">귀신이된 비챤▲ (00:12:00~00:24:00까지 뮤트)</a></ul>
+        <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/fWZr1LKYClI" target="_blank">귀신이된 비챤▲ (잔잔 악물원 , VRChat 풀트 사진감상 , 뱅종곡 - 불꽃 -> 홍련화)(00:12:00~00:24:00까지 뮤트)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3947796" target="_blank">21일</a> - </a href="" target="_blank">두둥등장</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - </a href="" target="_blank">등챤</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3959711" target="_blank">24일</a> - </a href="" target="_blank">급뱅온선언</a></ul>
@@ -307,7 +307,7 @@
 　　　                                                                                        (부정형 입대 , 악세사리 노가리 , 명절 친척 노가리 , 빻은 라니짤 , 노래 먹이기 , 고멤놀이터 - WF Waktaverse , 러브다이브 최초공개 , 후기 , 비하인드 사진 업로드)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - <a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">초짧뱅및공지 스튜디오 침수 , VR먹통 , 네이버 비밀번호 까먹음 , 쇼츠 주세요오오~ , WF Waktaverse 비하인드 및 가이드 , 러브다이브 썰 , 팬덤명 노가리</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - <a href="https://youtu.be/_c2rh-h4p8M" target="_blank">잠을......잤습니다... (필라테스 노가리 , 홍머 패션 노가리 , 언니가 1g이라도 사라지는건 싫어 , 민트만두가 누구야! 딱대! , 태풍 제발 꺼져!! , 스플레툰 3 , 100만포 - Calc. , B챤만화 외전 , 라니짤 모음집 , 오라버거 합방보며 친구합방 기대) </a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - </a href="https://youtu.be/HvsK5H9V51o" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - </a href="https://youtu.be/s45WyMsIsjc" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!! (한복챤 , 친구가리 , VRChat 풀트뱅 , 빌보두 , 이세마스 8화 , 노래 부를때 디테일 , 노래뱅(8.32 어쿠스틱있음) , 한복챤 , 러브다이브 의상 및 맵 , 왁숲 , 왁트세이버 , 고멤가요제 티저) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/zfDbSN29Mz8" target="_blank">작곡 1일차</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/8GaD924BMCI" target="_blank">운동하는뱅송</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ" target="_blank">수요일이닿!!!!!</a></ul>
