--- a/Jingburger233.html
+++ b/Jingburger233.html
@@ -264,12 +264,12 @@
 
     <ul>9월 (다시보기 내려가는대로 업데이트 될 예정)
        <ul><a href="https://cafe.naver.com/steamindiegame/7481000" target="_blank">02일</a> - <a href="https://youtu.be/R4m3gscsRIM" target="_blank">안녕하세용 징버거에용 (Eville 연습 , GTA5 2편)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7498728" target="_blank">03일</a> - </a href="" target="_blank">8시30분) 에비루 합방쓰 (왁타버스 합방 - Eville , GTA 3편)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7514201" target="_blank">04일</a> - <a href="https://youtu.be/HzHb4-YjQU4" target="_blank">안녕하세용 징버거에용 (궁극기 월드컵 , 짧래뱅 , 러브다이브 최초공개 , 러브다이브 비하인드 , 노래뱅 , GTA 4편)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7498728" target="_blank">03일</a> - </a href="" target="_blank">8시30분) 에비루 합방쓰 (왁타버스 합방 - Eville , GTA5 3편)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7514201" target="_blank">04일</a> - <a href="https://youtu.be/HzHb4-YjQU4" target="_blank">안녕하세용 징버거에용 (궁극기 월드컵 , 짧래뱅 , 러브다이브 최초공개 , 러브다이브 비하인드 , 노래뱅 , GTA5 4편)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7563841" target="_blank">08일</a> - <a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">💜포도알 인생네컷 감사하무니다💛 (세일러복 버거 공개 , 징보이 이후 빌드업 폐기썰 , VRChat 풀트뱅 - 럽다의상 , 노래뱅)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7571225" target="_blank">10일</a> - <a href="https://youtu.be/jUE6OABNByE" target="_blank">1시30분 추석맞이 징버거 오라버님과 간단한 저스트채팅^^ (추석특집 오라버거님 합방)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7608824" target="_blank">12일</a> - </a href="https://youtu.be/HvsK5H9V51o" target="_blank">좋은 밤이에용 (엄마는 외계인에 초코볼이 없어 , 가을의상 전신 , 고멤가요제 티저 , 고멤놀이터 - 냉면 , 발로란트 , GTA 5편)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7630923" target="_blank">14일</a> - </a href="https://youtu.be/zfDbSN29Mz8" target="_blank">뱅온 킹애~</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7608824" target="_blank">12일</a> - <a href="https://youtu.be/HvsK5H9V51o" target="_blank">좋은 밤이에용 (엄마는 외계인에 초코볼이 없어 , 가을의상 전신 , 고멤가요제 티저 , 고멤놀이터 - 냉면 , 발로란트 , GTA5 5편)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7630923" target="_blank">14일</a> - </a href="https://youtu.be/uBLNT6iLB8I" target="_blank">뱅온 킹애~  (왁물원 , 발로란트 , GTA5 6편)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7644880" target="_blank">15일</a> - </a href="https://youtu.be/8GaD924BMCI" target="_blank">버거등장</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7676951" target="_blank">17일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ" target="_blank">9시 고멤가요제</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7711674" target="_blank">19일</a> - </a href="https://youtu.be/A46alrH0_GM" target="_blank">사랑은 모시깽이~ 10시 OYT팬미팅! 💕</a></ul>
