--- a/Viichan233.html
+++ b/Viichan233.html
@@ -77,7 +77,7 @@
         <ul></a href="" target="_blank">19일</a> - </a href="" target="_blank">새벽 왕수다</a></ul>
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/nOqQJhqWFE4" target="_blank">일식먹고 VR (우타이테 노가리 , 리그 오브 레전드 , VRChat 풀트뱅 , 애기뺑띠) </a></ul>
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/fWZr1LKYClI" target="_blank">귀신이된 비챤▲ (잔잔 악물원 , VRChat 풀트 사진감상 , 뱅종곡 - 불꽃 -> 홍련화)(00:12:00~00:24:00까지 뮤트)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3947796" target="_blank">21일</a> - </a href="" target="_blank">두둥등장</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3947796" target="_blank">21일</a> - <a href="https://youtu.be/SZsFSgQmvy4" target="_blank">두둥등장 (뢴,주,고 롤 클립 , 이세돌 픽토그램 , 간파당한 비챤 , 리그 오브 레전드 1:1,솔랭)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - </a href="" target="_blank">등챤</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3959711" target="_blank">24일</a> - </a href="" target="_blank">급뱅온선언</a></ul>
         <ul></a href="" target="_blank">26일</a> - </a href="" target="_blank">금요잔잔뱅</a></ul>
@@ -309,9 +309,9 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7533242" target="_blank">06일</a> - <a href="https://youtu.be/Uuu2bXSrTtI" target="_blank">초짧뱅및공지 스튜디오 침수 , VR먹통 , 네이버 비밀번호 까먹음 , 쇼츠 주세요오오~ , WF Waktaverse 비하인드 및 가이드 , 러브다이브 썰 , 팬덤명 노가리</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7570688" target="_blank">09일</a> - <a href="https://youtu.be/_c2rh-h4p8M" target="_blank">잠을......잤습니다... (필라테스 노가리 , 홍머 패션 노가리 , 언니가 1g이라도 사라지는건 싫어 , 민트만두가 누구야! 딱대! , 태풍 제발 꺼져!! , 스플레툰 3 , 100만포 - Calc. , B챤만화 외전 , 라니짤 모음집 , 오라버거 합방보며 친구합방 기대) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - <a href="https://youtu.be/s45WyMsIsjc" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!! (한복챤 , 친구가리 , VRChat 풀트뱅 , 빌보두 , 이세마스 8화 , 노래 부를때 디테일 , 노래뱅(8.32 어쿠스틱있음) , 한복챤 , 러브다이브 의상 및 맵 , 왁숲 , 왁트세이버 , 고멤가요제 티저) </a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/zfDbSN29Mz8" target="_blank">작곡 1일차</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - </a href="https://youtu.be/8GaD924BMCI" target="_blank">운동하는뱅송</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ" target="_blank">수요일이닿!!!!!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - <a href="https://youtu.be/EEbHyfs7xp4" target="_blank">작곡 1일차 (피아노치기 , 면허가리 , 고멤 놀이터 - 냉면 , 오디션가리)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - <a href="https://youtu.be/_h4juTu1IhA" target="_blank">운동하는뱅송 (링피트)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - </a href="https://youtu.be/l9cRDF953is" target="_blank">수요일이닿!!!!! (피아노 , 넥슬다이브 시청 , 표정 바리에이션 체크(귀여움) , 비챤 의상 월드컵 , GTA5) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - </a href="https://youtu.be/A46alrH0_GM" target="_blank">7시) 몸치들의 저스트 댄스</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - </a href="https://youtu.be/YwGNWvWl0D4" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - </a href="https://youtu.be/ziitHs7XmyI" target="_blank">9시반) VRC 조공 선물(?)받기</a></ul>
