--- a/Viichan233.html
+++ b/Viichan233.html
@@ -18,6 +18,14 @@
     <nav><ul>임시 홈페이지 홈페이지 만드는거 익히는 중
       <p>날짜클릭 = 오뱅내 / 제목클릭 = 유튜브링크</p></ul>
       
+      <br>
+      <ul><p>※제목 뒤 마크에 관해서<br>
+          　 ●은 저작권으로 인해서 일부 구간이 음원이 교체되거나 잘라냈다는 표시입니다<br>
+          　 ▲은 저작권으로 인해서 뮤트가 된 구간이 있는 영상이라는 의미입니다<br>
+          　 　완전한 영상을 구하면 교체하겠습니다<br>
+          　 ★은 저작권이나 영상 길이로 인해 유튜브에 업로드가 불가능한 영상입니다<br>
+          　 　해당 영상은 다운로드로 넘어가게 되오니 용량에 주의하세요</p></ul>
+              
       <p><br></p>
       <ul>※ 영상에서 소리가 안나오는 구간(빨간선 구간)이 있거나 문제가 있다면<br>
           　 해당 영상의 댓글로 남겨주시면 체크하겠습니다<br>
@@ -78,7 +86,7 @@
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/nOqQJhqWFE4" target="_blank">일식먹고 VR (우타이테 노가리 , 리그 오브 레전드 , VRChat 풀트뱅 , 애기뺑띠) </a></ul>
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/fWZr1LKYClI" target="_blank">귀신이된 비챤▲ (잔잔 악물원 , VRChat 풀트 사진감상 , 뱅종곡 - 불꽃 -> 홍련화)(00:12:00~00:24:00까지 뮤트)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3947796" target="_blank">21일</a> - <a href="https://youtu.be/SZsFSgQmvy4" target="_blank">두둥등장 (뢴,주,고 롤 클립 , 이세돌 픽토그램 , 간파당한 비챤 , 리그 오브 레전드 1:1,솔랭)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - </a href="" target="_blank">등챤</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - </a href="https://youtu.be/UGlwiOuz_60" target="_blank">등챤▲ (리와인드 촬영 노가리 , 포켓몬 GO노가리 , 잼민챤 시절 노가리 , 리그 오브 레전드 , 뿌요뿌요 테트리스 , 노래뱅)(00:30:00 ~ 00:36:00까지 뮤트)  </a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3959711" target="_blank">24일</a> - </a href="" target="_blank">급뱅온선언</a></ul>
         <ul></a href="" target="_blank">26일</a> - </a href="" target="_blank">금요잔잔뱅</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3974459" target="_blank">28일</a> - </a href="" target="_blank">7시) 마인크래프트 24시간 (컨텐츠이름)</a></ul>
