--- a/Jingburger233.html
+++ b/Jingburger233.html
@@ -270,7 +270,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7571225" target="_blank">10일</a> - <a href="https://youtu.be/jUE6OABNByE" target="_blank">1시30분 추석맞이 징버거 오라버님과 간단한 저스트채팅^^ (추석특집 오라버거님 합방)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7608824" target="_blank">12일</a> - <a href="https://youtu.be/HvsK5H9V51o" target="_blank">좋은 밤이에용 (엄마는 외계인에 초코볼이 없어 , 가을의상 전신 , 고멤가요제 티저 , 고멤놀이터 - 냉면 , 발로란트 , GTA5 5편)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7630923" target="_blank">14일</a> - <a href="https://youtu.be/uBLNT6iLB8I" target="_blank">뱅온 킹애~  (왁물원 , 발로란트 , GTA5 6편)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7644880" target="_blank">15일</a> - </a href="https://youtu.be/8GaD924BMCI" target="_blank">버거등장</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7644880" target="_blank">15일</a> - <a href="https://youtu.be/UOxC4YiDbag" target="_blank">버거등장 (너 말고도 나 좋다는 사람 널렸어 , 폴가이즈 , GTA5 7편 , 그림판 그림 그리기 , 징버거 아바타 월드컵)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7676951" target="_blank">17일</a> - </a href="http://kalinos.duckdns.org:5000/sharing/ImodB4GVJ" target="_blank">9시 고멤가요제</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7711674" target="_blank">19일</a> - </a href="https://youtu.be/A46alrH0_GM" target="_blank">사랑은 모시깽이~ 10시 OYT팬미팅! 💕</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7749172" target="_blank">22일</a> - </a href="https://youtu.be/YwGNWvWl0D4" target="_blank">죠은밤이에용~ 라ㅏ며 인사를 해봅니다</a></ul>
