--- a/Viichan233.html
+++ b/Viichan233.html
@@ -86,11 +86,11 @@
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/nOqQJhqWFE4" target="_blank">일식먹고 VR (우타이테 노가리 , 리그 오브 레전드 , VRChat 풀트뱅 , 애기뺑띠) </a></ul>
         <ul></a href="" target="_blank">19일</a> - <a href="https://youtu.be/fWZr1LKYClI" target="_blank">귀신이된 비챤▲ (잔잔 악물원 , VRChat 풀트 사진감상 , 뱅종곡 - 불꽃 -> 홍련화)(00:12:00~00:24:00까지 뮤트)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3947796" target="_blank">21일</a> - <a href="https://youtu.be/SZsFSgQmvy4" target="_blank">두둥등장 (뢴,주,고 롤 클립 , 이세돌 픽토그램 , 간파당한 비챤 , 리그 오브 레전드 1:1,솔랭)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - </a href="https://youtu.be/UGlwiOuz_60" target="_blank">등챤▲ (리와인드 촬영 노가리 , 포켓몬 GO노가리 , 잼민챤 시절 노가리 , 리그 오브 레전드 , 뿌요뿌요 테트리스 , 노래뱅)(00:30:00 ~ 00:36:00까지 뮤트)  </a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3959711" target="_blank">24일</a> - </a href="" target="_blank">급뱅온선언</a></ul>
-        <ul></a href="" target="_blank">26일</a> - </a href="" target="_blank">금요잔잔뱅</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3974459" target="_blank">28일</a> - </a href="" target="_blank">7시) 마인크래프트 24시간 (컨텐츠이름)</a></ul>
-        <ul><a href="https://cafe.naver.com/steamindiegame/3979662" target="_blank">29일</a> - </a href="" target="_blank">월요일조아</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3955468" target="_blank">23일</a> - <a href="https://youtu.be/UGlwiOuz_60" target="_blank">등챤▲ (리와인드 촬영 노가리 , 포켓몬 GO노가리 , 잼민챤 시절 노가리 , 리그 오브 레전드 , 뿌요뿌요 테트리스 , 노래뱅)(00:30:00 ~ 00:36:00까지 뮤트)  </a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3959711" target="_blank">24일</a> - <a href="https://youtu.be/Ab1tTKvfDwg" target="_blank">급뱅온선언 (천버거 소식에 오열 , 디코 귀신 , 프로 사커 , 마인크래프트)</a></ul>
+        <ul></a href="" target="_blank">26일</a> - <a href="https://youtu.be/i9qMR3e4vO4" target="_blank">금요잔잔뱅 (노래뱅 , ALTF4 , 리그 오브 레전드 , 뱅종곡 - New Future)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3974459" target="_blank">28일</a> - <a href="https://youtu.be/7numVpv-2Xc" target="_blank">7시) 마인크래프트 24시간 (컨텐츠이름) (리그 오브 레전드 , 마인크래프트 - 점령전 , 요리가리)</a></ul>
+        <ul><a href="https://cafe.naver.com/steamindiegame/3979662" target="_blank">29일</a> - <a href="https://youtu.be/HWU_YeYr0l0" target="_blank">월요일조아 (Daybreak Frontline 10만 달성 및 감상 , 홍머병 노가리(해골반지,케이블타이) , 제주도 수학여행 썰 , 학창시절 노가리 , 알바 노가리+이세돌에게 어울리는 알바 , 술가리 , 실친들 이세돌가리)</a></ul>
         <ul><a href="https://cafe.naver.com/steamindiegame/3982783" target="_blank">30일</a> - </a href="" target="_blank">4시30분) VR챗 왕탐방</a></ul>
         
       
@@ -319,8 +319,8 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7595698" target="_blank">11일</a> - <a href="https://youtu.be/s45WyMsIsjc" target="_blank">5시) 야호!!!!! 추석맞이 풀트뱅!!! (한복챤 , 친구가리 , VRChat 풀트뱅 , 빌보두 , 이세마스 8화 , 노래 부를때 디테일 , 노래뱅(8.32 어쿠스틱있음) , 한복챤 , 러브다이브 의상 및 맵 , 왁숲 , 왁트세이버 , 고멤가요제 티저) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - <a href="https://youtu.be/EEbHyfs7xp4" target="_blank">작곡 1일차 (피아노치기 , 면허가리 , 고멤 놀이터 - 냉면 , 오디션가리)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7619159" target="_blank">13일</a> - <a href="https://youtu.be/_h4juTu1IhA" target="_blank">운동하는뱅송 (링피트)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - </a href="https://youtu.be/l9cRDF953is" target="_blank">수요일이닿!!!!! (피아노 , 넥슬다이브 시청 , 표정 바리에이션 체크(귀여움) , 비챤 의상 월드컵 , GTA5) </a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - </a href="https://youtu.be/A46alrH0_GM" target="_blank">7시) 몸치들의 저스트 댄스</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - <a href="https://youtu.be/l9cRDF953is" target="_blank">수요일이닿!!!!! (피아노 , 넥슬다이브 시청 , 표정 바리에이션 체크(귀여움) , 비챤 의상 월드컵 , GTA5) </a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - <a href="https://youtu.be/r3dri1TkFx0" target="_blank">7시) 몸치들의 저스트 댄스 (피아노 , 면허 따 감상 , 면허가리(아빠 차 강탈) , 썸네일가리 , 8월 챤래뱅 플리 , 롤드컵 노래가리 , 고컬로이드 세구세구 , VRChat풀트뱅 , 저스트 댄스 , 노래뱅 4곡)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - </a href="https://youtu.be/YwGNWvWl0D4" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - </a href="https://youtu.be/ziitHs7XmyI" target="_blank">9시반) VRC 조공 선물(?)받기</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - </a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날</a></ul>
