--- a/Jingburger.html
+++ b/Jingburger.html
@@ -16,6 +16,14 @@
     <nav><ul>임시 홈페이지 홈페이지 만드는거 익히는 중
       <p>날짜클릭 = 오뱅내 / 제목클릭 = 유튜브링크</p></ul>
       
+      <br>
+      <ul><p>※제목 뒤 마크에 관해서<br>
+          　 ●은 저작권으로 인해서 일부 구간이 음원이 교체되거나 잘라냈다는 표시입니다<br>
+          　 ▲은 저작권으로 인해서 뮤트가 된 구간이 있는 영상이라는 의미입니다<br>
+          　 　완전한 영상을 구하면 교체하겠습니다<br>
+          　 ★은 저작권이나 영상 길이로 인해 유튜브에 업로드가 불가능한 영상입니다<br>
+          　 　해당 영상은 다운로드로 넘어가게 되오니 용량에 주의하세요</p></ul>
+      
       <p><br></p>
       <ul>※ 영상에서 소리가 안나오는 구간(빨간선 구간)이 있거나 문제가 있다면<br>
           　 해당 영상의 댓글로 남겨주시면 체크하겠습니다<br>
