--- a/Viichan.html
+++ b/Viichan.html
@@ -62,7 +62,7 @@
         <ul>02일 - <a href="https://youtu.be/JI1JR500I3g" target="_blank">잔잔 바리바리 (뢴트 소집해제 , 마크 , 이세돌 어몽어스 합방)</a></ul>
         <ul>05일 - <a href="https://youtu.be/j6SMxF_7IaM" target="_blank">좋화좋은 화요일이라는 뜻▲ (노래뱅(튤립있다!) , 팬게임 , VRC탸니) (4:54:00~3:00:00까지 뮤트 , 영상 있으신분 제공해주시면 감사합니다)</a></ul>
         <ul>08일 - <a href="https://youtu.be/CPS0in8k8Us" target="_blank">오징어게임 (왁타버스 합방 - 오징어게임)</a></ul>
-        <ul>31일 - </a href="https://youtu.be/z479KgGwAgM" target="_blank">할로윈 기념 왕게임데이 (파스모포비아,데바데)</a></ul></ul>
+        <ul>31일 - <a href="https://youtu.be/z479KgGwAgM" target="_blank">할로윈 기념 왕게임데이 (파스모포비아,데바데)</a></ul></ul>
       </ul>
       <p>　</p>
     
@@ -98,8 +98,8 @@
 
   
         <ul>12월
-          <ul><a href="https://cafe.naver.com/steamindiegame/3998287" target="_blank">03일</a> - </a href="" target="_blank">12월이다!</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - </a href="" target="_blank">큰거 후기 이후 롤 오직운게임</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/3998287" target="_blank">03일</a> - <a href="https://youtu.be/rmFI_YgUbHE" target="_blank">12월이다!▲ (리그 오브 레전드 , 시청자 랜덤 1:1 매치 , 이세돌 마인크래프트 합방 - 엔잡그)(00:30:00 ~ 00:42:00까지 뮤트)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - <a href="https://youtu.be/r2PYLJyAnCs" target="_blank">큰거 후기 이후 롤 오직운게임 (실친들 만나고 온 썰 , 이세돌 100일 기념 영상 코멘터리 , Butter-Fly 가이드 - 코러스 , 울먹챤)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - </a href="" target="_blank">롤 오직운게임</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4019202" target="_blank">08일</a> - </a href="" target="_blank">4시) VR 버츄얼 마켓 탐방</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4030315" target="_blank">10일</a> - </a href="" target="_blank">데뷔합니다</a></ul>
