--- a/Viichan.html
+++ b/Viichan.html
@@ -101,7 +101,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/3998287" target="_blank">03일</a> - <a href="https://youtu.be/rmFI_YgUbHE" target="_blank">12월이다!▲ (리그 오브 레전드 , 시청자 랜덤 1:1 매치 , 이세돌 마인크래프트 합방 - 엔잡그)(00:30:00 ~ 00:42:00까지 뮤트)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - <a href="https://youtu.be/r2PYLJyAnCs" target="_blank">큰거 후기 이후 롤 오직운게임 (실친들 만나고 온 썰 , 이세돌 100일 기념 영상 코멘터리 , Butter-Fly 가이드 - 코러스 , 울먹챤)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - <a href="https://youtu.be/FbJJFevm5Nw" target="_blank">롤 오직운게임 (리그 오브 레전드 - 오직 운 게임 , 우주 꿈 이야기 , 뱅종곡 - New Future(달빛천사))</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4019202" target="_blank">08일</a> - </a href="" target="_blank">4시) VR 버츄얼 마켓 탐방</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4019202" target="_blank">08일</a> - <a href="https://youtu.be/XdikQtr90ls" target="_blank">4시) VR 버츄얼 마켓 탐방 (※04:44:00 굉음 주의※)(노래뱅 , VRChat 풀트뱅 , VRChat 버츄얼 마켓 탐방 , 뱅종곡 - 금요일에 만나요)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4030315" target="_blank">10일</a> - </a href="" target="_blank">데뷔합니다</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4033137" target="_blank">11일</a> - </a href="" target="_blank">불타는토요일</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4039564" target="_blank">12일</a> - </a href="" target="_blank">축구 하는 날!</a></ul>
