--- a/Viichan.html
+++ b/Viichan.html
@@ -102,10 +102,10 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - <a href="https://youtu.be/r2PYLJyAnCs" target="_blank">큰거 후기 이후 롤 오직운게임 (실친들 만나고 온 썰 , 이세돌 100일 기념 영상 코멘터리 , Butter-Fly 가이드 - 코러스 , 울먹챤)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4005763" target="_blank">05일</a> - <a href="https://youtu.be/FbJJFevm5Nw" target="_blank">롤 오직운게임 (리그 오브 레전드 - 오직 운 게임 , 우주 꿈 이야기 , 뱅종곡 - New Future(달빛천사))</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4019202" target="_blank">08일</a> - <a href="https://youtu.be/XdikQtr90ls" target="_blank">4시) VR 버츄얼 마켓 탐방 (※04:44:00 굉음 주의※)(노래뱅 , VRChat 풀트뱅 , VRChat 버츄얼 마켓 탐방 , 뱅종곡 - 금요일에 만나요)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4030315" target="_blank">10일</a> - </a href="" target="_blank">데뷔합니다</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4033137" target="_blank">11일</a> - </a href="" target="_blank">불타는토요일</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4030315" target="_blank">10일</a> - <a href="https://youtu.be/YW0wLl0AMUM" target="_blank">데뷔합니다 (RE:WIND 티저 , 상황극 컨테스트 - 변이 후기 감상 , 티팔이 생제르맹 응원가 M/V 공개 및 비하인드 , VRChat 촬영 사진들 , 선우정아 - 고양이 , 그랜절 , 야식 노가리(서브웨이,아인슈페너))</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4033137" target="_blank">11일</a> - <a href="https://youtu.be/XKHI9LJpCtg" target="_blank">불타는토요일 (릴파&비챤 사운드 클라우드 노가리 , 하트 폭격 , VRChat 맵 탐방 , 오토바이 경주 맵 , 오피스 챤(챤대리) 공개 , 천양 다이노스 공식 응원가 공개 , 고멤 놀이터 - Rhythm : Dancing Gomem , 뢴트 고로시)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4039564" target="_blank">12일</a> - </a href="" target="_blank">축구 하는 날!</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4044805" target="_blank">13일</a> - </a href="" target="_blank">오늘도 치고 달려나가!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4044805" target="_blank">13일</a> - <a href="https://youtu.be/9J6QuCuhzH8" target="_blank">오늘도 치고 달려나가! (이세돌 팬게임 - 야생 이세돌 경주의 날(쿠키런) , 염색 노가리 , 영화 -> 공포영화 노가리 , VRChat 맵탐방 , MMD월드 , 방종곡 - 별의 조각)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4050349" target="_blank">14일</a> - </a href="" target="_blank">즐거운 화요일 '-^</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4057870" target="_blank">15일</a> - </a href="" target="_blank">스포금지</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - </a href="" target="_blank">낮모든 스포에 무적입니다</a></ul>
@@ -350,7 +350,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - <a href="https://youtu.be/l9cRDF953is" target="_blank">수요일이닿!!!!! (피아노 , 넥슬다이브 시청 , 표정 바리에이션 체크(귀여움) , 비챤 의상 월드컵 , GTA5) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - <a href="https://youtu.be/r3dri1TkFx0" target="_blank">7시) 몸치들의 저스트 댄스 (피아노 , 면허 따 감상 , 면허가리(아빠 차 강탈) , 썸네일가리 , 8월 챤래뱅 플리 , 롤드컵 노래가리 , 고컬로이드 세구세구 , VRChat풀트뱅 , 저스트 댄스 , 노래뱅 4곡)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - <a href="https://youtu.be/LLEk2E0DwVg" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - </a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - VIICHAN STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - <a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - Viichan STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - </a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재</a></ul>
