--- a/Viichan.html
+++ b/Viichan.html
@@ -106,8 +106,8 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4033137" target="_blank">11일</a> - <a href="https://youtu.be/XKHI9LJpCtg" target="_blank">불타는토요일 (릴파&비챤 사운드 클라우드 노가리 , 하트 폭격 , VRChat 맵 탐방 , 오토바이 경주 맵 , 오피스 챤(챤대리) 공개 , 천양 다이노스 공식 응원가 공개 , 고멤 놀이터 - Rhythm : Dancing Gomem , 뢴트 고로시)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4039564" target="_blank">12일</a> - </a href="" target="_blank">축구 하는 날!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4044805" target="_blank">13일</a> - <a href="https://youtu.be/9J6QuCuhzH8" target="_blank">오늘도 치고 달려나가! (이세돌 팬게임 - 야생 이세돌 경주의 날(쿠키런) , 염색 노가리 , 영화 -> 공포영화 노가리 , VRChat 맵탐방 , MMD월드 , 방종곡 - 별의 조각)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4050349" target="_blank">14일</a> - </a href="" target="_blank">즐거운 화요일 '-^</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4057870" target="_blank">15일</a> - </a href="" target="_blank">스포금지</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4050349" target="_blank">14일</a> - <a href="https://youtu.be/AHbZrsJkzOc" target="_blank">즐거운 화요일 '-^ (리그 오브 레전드 , 빼빼로 데이 영상 노가리 , 비챤 연애 시뮬레이션 , 솔로 노가리 , 발음 노가리(새우로얄뉴로얄) , 공포 노가리 , 헤드셋가리 , 뱅종곡 - 나의 사춘기에게)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4057870" target="_blank">15일</a> - <a href="https://youtu.be/olB6C5mnxTM" target="_blank">스포금지 (노래방 노가리 , 이세돌 합격 매드무비 : 눈물의 씨앗 웃음의 꽃 , 황당한 라이트 노벨 제목 월드컵 , 가족 노가리 , 아버지 선물 고르기 , 고라니 생태조사 시트 제작 , 뱅종곡 - 일레븐)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - </a href="" target="_blank">낮모든 스포에 무적입니다</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - </a href="" target="_blank">낮에는 음원차트 1위 아이돌이었던 내가 밤에는 평범한 대학생?!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4103097" target="_blank">19일</a> - </a href="" target="_blank">안녕하세요!!!</a></ul>
