--- a/Viichan.html
+++ b/Viichan.html
@@ -351,7 +351,7 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - <a href="https://youtu.be/r3dri1TkFx0" target="_blank">7시) 몸치들의 저스트 댄스 (피아노 , 면허 따 감상 , 면허가리(아빠 차 강탈) , 썸네일가리 , 8월 챤래뱅 플리 , 롤드컵 노래가리 , 고컬로이드 세구세구 , VRChat풀트뱅 , 저스트 댄스 , 노래뱅 4곡)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - <a href="https://youtu.be/LLEk2E0DwVg" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - <a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - Viichan STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - </a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/EL94fT9j4fs" target="_blank">VRC 풀트랑 싸우는 날 (트루러버 썸네일 시선강탈 , 비챤 관련 고멤가요제 후기방송 클립 모음 , 그냥 살아 라이브 , VRChat 풀트뱅 , 맵탐방 - POP챌린지 맵,그냥살아 맵,Viichan STUDIO 맵,왁트세이버 , 감다뒤와 감다살 , 우리 노래 진짜 많다 , 노래뱅)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~</a></ul> 
        <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )//</a></ul>
