--- a/Viichan.html
+++ b/Viichan.html
@@ -110,8 +110,8 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4057870" target="_blank">15일</a> - <a href="https://youtu.be/olB6C5mnxTM" target="_blank">스포금지 (노래방 노가리 , 이세돌 합격 매드무비 : 눈물의 씨앗 웃음의 꽃 , 황당한 라이트 노벨 제목 월드컵 , 가족 노가리 , 아버지 선물 고르기 , 고라니 생태조사 시트 제작 , 뱅종곡 - 일레븐)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - <a href="https://youtu.be/W0OWDOdv0_8" target="_blank">모든 스포에 무적입니다 (RE:WIND 공개 및 데뷔 , 스트리밍 총공)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - <a href="https://youtu.be/7C86fSwRd5c" target="_blank">낮에는 음원차트 1위 아이돌이었던 내가 밤에는 평범한 대학생?! (왁굳 사이버 대학교 - 리그 오브 레전드 개론,가죽의 기초,예술과 철학,절대음감과 상대음감,색 영역의 이해,영상미디어의 역사와 왁타버스 , 노래뱅 , VRChat 풀트뱅 , 신규아바타 힙챤 공개 , 노숙챤)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4103097" target="_blank">19일</a> - <a href="https://youtu.be/v56GRyUqSa0" target="_blank">안녕하세요!!! (실친 노가리 , 맏내와 막내의 키배 , VRChat풀트뱅 - 이세돌 합방 리와인드 팬미팅 , 주간 이세돌 - 리와인드 공개 멤버반응 , 챤버지 썰)</a></ul>
-          <ul></a href="" target="_blank">20일</a> - </a href="" target="_blank">잔잔바바리리</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4103097" target="_blank">19일</a> - <a href="https://youtu.be/v56GRyUqSa0" target="_blank">안녕하세요!!! (실친 노가리 , 맏내와 막내의 키배 , VRChat풀트뱅 - 이세돌 합방 리와인드 팬미팅 , 진격의 거인 비챤 음성합성 , 주간 이세돌 - 리와인드 공개 멤버반응 , 챤버지 썰)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4107039" target="_blank">20일</a> - <a href="https://youtu.be/5AwArpMk31E" target="_blank">잔잔바바리리 (</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4125579" target="_blank">21일</a> - </a href="" target="_blank">지코쿠 지코쿠~~~~(סיםיס)!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">22일</a> - </a href="" target="_blank">한 숨을 자려다 두 숨을 자버렸다치키타치~!! (｡•̀ᴗ-)✧</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">24일</a> - </a href="" target="_blank">자고 일어났더니 하루가 사라졌어요（´〇｀）</a></ul>
@@ -352,9 +352,9 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - <a href="https://youtu.be/LLEk2E0DwVg" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - <a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - Viichan STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/EL94fT9j4fs" target="_blank">VRC 풀트랑 싸우는 날 (트루러버 썸네일 시선강탈 , 비챤 관련 고멤가요제 후기방송 클립 모음 , 그냥 살아 라이브 , VRChat 풀트뱅 , 맵탐방 - POP챌린지 맵,그냥살아 맵,Viichan STUDIO 맵,왁트세이버 , 감다뒤와 감다살 , 우리 노래 진짜 많다 , 노래뱅)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )//</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일</a> - </a href="https://youtu.be/ROWXNHJT9is" target="_blank">모닝챤~ (아침뱅 , 노래뱅)</a></ul> 
+       <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - <a href="https://youtu.be/HvSYkZFTXJo" target="_blank">수요일 두개재 (유튜브 확장프로그램 써보기 , 설립자 정리 , 매니저 채팅 부검 , 고대챤 클립 , 스플래툰3 , 이상한 소리하지마 변태)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - <a href="https://youtu.be/TkgLZV3A9uk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )// (마린챤 저챗 등장 , 집으로 커피시켜서 5분안에 돌아오기 , 고멤가요제 김피탕&짬뽕 후기 둘러보기 , 그냥 살아! 녹음파일 공개 , 스타크래프트 , 팬덤전쟁 대비 6공주와 티타임 , 빼꼼챤 , 경멸챤 , 뱅종 노래뱅) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7787674" target="_blank">24일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">마크 팬덤전쟁~!!! (･ω･)//</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7799293" target="_blank">25일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">오늘도 감사합니다~!!!!</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7834367" target="_blank">27일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">6시) VRC 풀트뱅 ~!</a></ul>
