--- a/Viichan.html
+++ b/Viichan.html
@@ -111,12 +111,12 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - <a href="https://youtu.be/W0OWDOdv0_8" target="_blank">모든 스포에 무적입니다 (RE:WIND 공개 및 데뷔 , 스트리밍 총공)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4085209" target="_blank">17일</a> - <a href="https://youtu.be/7C86fSwRd5c" target="_blank">낮에는 음원차트 1위 아이돌이었던 내가 밤에는 평범한 대학생?! (왁굳 사이버 대학교 - 리그 오브 레전드 개론,가죽의 기초,예술과 철학,절대음감과 상대음감,색 영역의 이해,영상미디어의 역사와 왁타버스 , 노래뱅 , VRChat 풀트뱅 , 신규아바타 힙챤 공개 , 노숙챤)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4103097" target="_blank">19일</a> - <a href="https://youtu.be/v56GRyUqSa0" target="_blank">안녕하세요!!! (실친 노가리 , 맏내와 막내의 키배 , VRChat풀트뱅 - 이세돌 합방 리와인드 팬미팅 , 진격의 거인 비챤 음성합성 , 주간 이세돌 - 리와인드 공개 멤버반응 , 챤버지 썰)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4107039" target="_blank">20일</a> - <a href="https://youtu.be/5AwArpMk31E" target="_blank">잔잔바바리리 (</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4125579" target="_blank">21일</a> - </a href="" target="_blank">지코쿠 지코쿠~~~~(סיםיס)!</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">22일</a> - </a href="" target="_blank">한 숨을 자려다 두 숨을 자버렸다치키타치~!! (｡•̀ᴗ-)✧</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">24일</a> - </a href="" target="_blank">자고 일어났더니 하루가 사라졌어요（´〇｀）</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4107039" target="_blank">20일</a> - <a href="https://youtu.be/5AwArpMk31E" target="_blank">잔잔바바리리 (넥슬좌 천양 인터뷰 왁굳형 반응 시청 , 리그 오브 레전드 , 디스코팡팡,방방 노가리 , 뱅종곡 - Dry Flower)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4125579" target="_blank">21일</a> - <a href="https://youtu.be/1Qtmwx_BpYM" target="_blank">지코쿠 지코쿠~~~~(סיםיס)! (그림 후원 , 고대탸니 영상 , 노래뱅 , RE:WIND 뮤비 최초 공개 , 촬영 코멘터리 , 단체 오열)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">22일</a> - <a href="https://youtu.be/vQQra_e4obQ" target="_blank">한 숨을 자려다 두 숨을 자버렸다치키타치~!! (｡•̀ᴗ-)✧ (늦게 시작한 음악 , 리와인드 촬영 사진 감상하며 썰) </a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">24일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/miuRFZu3x" target="_blank">자고 일어났더니 하루가 사라졌어요（´〇｀）★ (비(즈니스 킴) 소(피아) Santa Clausis coming to town 캐롤 , (해)루(석) 비(밀소녀) Text Me Merry Christmas 캐롤 , 데이브레이크 직캠 , 고라니 생태조사 , Krampus is Home , 뱅종곡 - One Room, All That Jazz)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">25일</a> - </a href="" target="_blank">크리스마스 라니! (*^・^)ノ♪</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">26일</a> - </a href="" target="_blank">팬게임 해야하니까 어쨌든 크리스마스입니다</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">26일</a> - <a href="https://youtu.be/9HpDigw2f4I" target="_blank">팬게임 해야하니까 어쨌든 크리스마스입니다 (왁타버스 캐릭터 테스트 , 팬게임 - 비챤과 버거의 크리스마스 대탈출 , 르르땅의 비챤 성대모사</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4179003" target="_blank">27일</a> - </a href="" target="_blank">똥겜 + VR 테스트 날</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4179003" target="_blank">28일</a> - </a href="" target="_blank">차원을 넘어 너에게 달려가고 있써~~</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4193583" target="_blank">29일</a> - </a href="" target="_blank">행복한 수요일</a></ul>
@@ -173,7 +173,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4831774" target="_blank">23일</a> - 애플 퀄리티</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4866567" target="_blank">25일</a> - <a href="https://youtu.be/1Z8S1LQ4Y_g" target="_blank">지각지각~~~~ (편집자 NTR , 하종 노래뱅)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4880066" target="_blank">26일</a> - 4시) VR 동계올림픽</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4898605" target="_blank">27일</a> - <a href="https://youtu.be/jvHsXo7QEhI" target="_blank">4시) 엘든링 (노래뱅 , 엘든링 1편)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4898605" target="_blank">27일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/O4RiIhmfV" target="_blank">4시) 엘든링★ (노래뱅 , 엘든링 1편)</a></ul>
         
         </ul>
           <p>　</p>
