--- a/Viichan.html
+++ b/Viichan.html
@@ -115,12 +115,12 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4125579" target="_blank">21일</a> - <a href="https://youtu.be/1Qtmwx_BpYM" target="_blank">지코쿠 지코쿠~~~~(סיםיס)! (그림 후원 , 고대탸니 영상 , 노래뱅 , RE:WIND 뮤비 최초 공개 , 촬영 코멘터리 , 단체 오열)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">22일</a> - <a href="https://youtu.be/vQQra_e4obQ" target="_blank">한 숨을 자려다 두 숨을 자버렸다치키타치~!! (｡•̀ᴗ-)✧ (늦게 시작한 음악 , 리와인드 촬영 사진 감상하며 썰) </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4147553" target="_blank">24일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/miuRFZu3x" target="_blank">자고 일어났더니 하루가 사라졌어요（´〇｀）★ (비(즈니스 킴) 소(피아) Santa Clausis coming to town 캐롤 , (해)루(석) 비(밀소녀) Text Me Merry Christmas 캐롤 , 데이브레이크 직캠 , 고라니 생태조사 , Krampus is Home , 뱅종곡 - One Room, All That Jazz)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">25일</a> - </a href="" target="_blank">크리스마스 라니! (*^・^)ノ♪</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">26일</a> - <a href="https://youtu.be/9HpDigw2f4I" target="_blank">팬게임 해야하니까 어쨌든 크리스마스입니다 (왁타버스 캐릭터 테스트 , 팬게임 - 비챤과 버거의 크리스마스 대탈출 , 르르땅의 비챤 성대모사</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4179003" target="_blank">27일</a> - </a href="" target="_blank">똥겜 + VR 테스트 날</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4179003" target="_blank">28일</a> - </a href="" target="_blank">차원을 넘어 너에게 달려가고 있써~~</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4193583" target="_blank">29일</a> - </a href="" target="_blank">행복한 수요일</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4199087" target="_blank">31일</a> - </a href="" target="_blank">4시) VR 마크</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">25일</a> - <a href="https://youtu.be/8Lm7wx4bOOw" target="_blank">크리스마스 라니! (*^・^)ノ♪ (루돌프챤 , VRChat 풀트뱅 , 루돌프 아바타 공개 , 맵조공 - 챤스패치 , 크리스마스 왁엔터 , 산타챤 공개 , 방구석 패션쇼(방패쇼) , 방종곡 - 백넘버 크리스마스 송)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4163106" target="_blank">26일</a> - <a href="https://youtu.be/9HpDigw2f4I" target="_blank">팬게임 해야하니까 어쨌든 크리스마스입니다 (왁타버스 캐릭터 테스트 , 팬게임 - 비챤과 버거의 크리스마스 대탈출 , 르르땅의 비챤 성대모사 , 스푼챤 , 연말 라디오)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4179003" target="_blank">27일</a> - <a href="https://youtu.be/i1siLOZKGYk" target="_blank">똥겜 + VR 테스트 날 (My Waktaverse 가이드 , 도네받고 고장난챤 , 즙나기 , 연공전 돌아보기 , 뱀파이어 사클 업로드 , 천언담 채널 발견 , Just 4 U 시청 , There is no game)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4179003" target="_blank">28일</a> - <a href="https://youtu.be/F8nH5i1OZ8g" target="_blank">차원을 넘어 너에게 달려가고 있써~~ (왁미제라블 감상 후기 , 갑분 침대 모금 , VRChat 풀트뱅 , 저스트댄스 , 는 개같이 멸망 , 리그 오브 레전드 , 노래뱅(Loser있음))</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4193583" target="_blank">29일</a> - <a href="https://youtu.be/zWyjIVNCBRU" target="_blank">행복한 수요일 (연공전 팬게임 - 만져라! 메이드 인 왁,왁타펜스,넥크소울 , 릴파 아웃트로 더빙 , 비언담(비챤 언니들 담배핀다) , 방종곡 - 취기)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4199087" target="_blank">31일</a> - <a href="https://youtu.be/VeFf0sPGLno" target="_blank">4시) VR 마크 (전날 달리고 온 썰 , 연합뉴스에 나온 챤 , RE:WIND 응원법 , 매니저의 실체 목격 , 따이따이 헨따이! , VR 마인크래프트 , 개같이 유출 , 어~ 이네 왔냐~ , 막내온탑)</a></ul>
         </ul>
 
     <p>　</p>
