--- a/Jingburger.html
+++ b/Jingburger.html
@@ -251,7 +251,7 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/61yhBsLef-8" target="_blank">8시 아르마3 랜덤고지전 기모띠▲ (군필버거 아바타 공개 , 아르마 1부)(앞부분짤림 영상구함)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">06일</a> - <a href="https://youtu.be/2kjTxRFwIPw" target="_blank">아르마3 랜덤고지전 징버거 시점 (아르마 2부 , 징탱크)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7167268" target="_blank">07일</a> - <a href="https://youtu.be/bzZ4W74L3Jg" target="_blank">전장에서 패배하고 먹는 눈물젖은 군대리아 집에서 먹기 (군필버거 전신 , 군대리아 , 오라버거 별사탕 , BOB 같이보기 4화)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/7184746" target="_blank">07일</a> - </a href="" target="_blank">아아~ 좋은 주말데수와</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/7184746" target="_blank">07일</a> - </a href="https://youtu.be/cHEdGrexwIg" target="_blank">아아~ 좋은 주말데수와 (베스킨라빈스 노가리 , NECK:WIND 감상 , 23살 왁굳과 16살 천양 토크온 , 류제홍님에게 칭찬받은 버거넴 , 별나무 카페 후기 관람 , IB , 이세돌 명언 월드컵 , 페이셜두 , 노래뱅)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7192549" target="_blank">09일</a> - <a href="https://youtu.be/5dJk8s058rc" target="_blank">엄청나게 짧은 (뉴버거 디자인 공개 , 이세돌 칭찬감옥 그루밍)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7234206" target="_blank">11일</a> - <a href="http://kalinos.duckdns.org:5000/sharing/7Y2ZKW7ok" target="_blank">뱅온★ (불량식품 노가리 , 이제 누가 언니지? 리믹스 리액션 , VRChat 맵탐방 , VRChat 노래뱅 , 딸기커피 반응 , 로스트아크 , 일기 작성 , 조카랑 놀아주는 썰)(저작권 이슈)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/7265628" target="_blank">13일</a> - <a href="https://youtu.be/ia9OiO2FiWE" target="_blank">ㅎㅇ (VRChat 풀트버거 버추얼 마켓 탐방)</a></ul>
