--- a/Viichan.html
+++ b/Viichan.html
@@ -129,10 +129,10 @@
         <ul>1월
           <ul><a href="https://cafe.naver.com/steamindiegame/4217292" target="_blank">01일</a> - <a href="https://youtu.be/VeFf0sPGLno" target="_blank">임인년 새해 복 많이받으세요~! (한복챤 공개 , 홋치 홋치 하치키타치 , VRChat 풀트뱅 , 전통풍 맵탐방 , 아씨와 나리 상황극 , 노래뱅 , 아이네 링피트 & 릴파 신의 지하실 구경)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4224955" target="_blank">03일</a> - <a href="https://youtu.be/bvn07acAq-s" target="_blank">행복한 월요일 되세요~! (FPS노가리 , 황금 용띠 비챤 , 전화받는 챠니랑 티키타카하는 라니들 , 우주 꿈 노가리 , DAYBREAK FRONTLINE 제작할때 심경(내 미래에 대한 확신이 없었어) , 연공전 게임 - 왁타펜스 하드모드 , 알바 진상 손님 노가리 , 나르 성대모사 , 뱅종곡 - 스물셋)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4232517" target="_blank">04일</a> - 4시) VR 마인크래프트 철인3종</a></ul>
-          <ul>05일</a> - 안녕하세요!!!! 수요일입니다!!!!</a></ul>
-          <ul>07일</a> - 지 각 하 다</a></ul>
-          <ul>08일</a> - 토요일이무니다!!!!!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4232517" target="_blank">04일</a> - <a href="https://youtu.be/xjYppNt3BVM" target="_blank">4시) VR 마인크래프트 철인3종 (대상포진 걸린 썰 , 이세돌 회의때 분위기 , 커버곡 정하면서 짧게 노래 , VR 마인크래프트 - 철인 3종 , 우벌님 밥줘 , 챤행기 , 러쉬 썰 , 이세돌 합격 비하인드 팬영상 감상 , 방종곡 - 신호등)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4246140" target="_blank">05일</a> - <a href="https://youtu.be/IA-s2iuDFjY" target="_blank">안녕하세요!!!! 수요일입니다!!!! (밸런스 게임 , 리그 오브 레전드 , 감독님들 RE:WIND 리뷰)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4288691" target="_blank">07일</a> - <a href="https://youtu.be/I4aOHcOy-dg" target="_blank">지 각 하 다 (오프닝 노래 - 홀로(이하이) , RE:WIND 비하인드 뮤비 비하인드 , 리그 오브 레전드 , 왁굳님과 커버곡 정하기 , 방종곡 - Track 9)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4288691" target="_blank">08일</a> - 토요일이무니다!!!!!</a></ul>
           <ul>09일</a> - 밀린 팬아트 보는 날</a></ul>
           <ul>10일</a> - 월요일이왔챤</a></ul>
           <ul>11일</a> - 4시) 키챠니아 VR 맵탐방</a></ul>
