--- a/Viichan.html
+++ b/Viichan.html
@@ -132,11 +132,11 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4232517" target="_blank">04일</a> - <a href="https://youtu.be/xjYppNt3BVM" target="_blank">4시) VR 마인크래프트 철인3종 (대상포진 걸린 썰 , 이세돌 회의때 분위기 , 커버곡 정하면서 짧게 노래 , VR 마인크래프트 - 철인 3종 , 우벌님 밥줘 , 챤행기 , 러쉬 썰 , 이세돌 합격 비하인드 팬영상 감상 , 방종곡 - 신호등)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4246140" target="_blank">05일</a> - <a href="https://youtu.be/IA-s2iuDFjY" target="_blank">안녕하세요!!!! 수요일입니다!!!! (밸런스 게임 , 리그 오브 레전드 , 감독님들 RE:WIND 리뷰)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4288691" target="_blank">07일</a> - <a href="https://youtu.be/I4aOHcOy-dg" target="_blank">지 각 하 다 (오프닝 노래 - 홀로(이하이) , RE:WIND 비하인드 뮤비 비하인드 , 리그 오브 레전드 , 왁굳님과 커버곡 정하기 , 방종곡 - Track 9)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4288691" target="_blank">08일</a> - 토요일이무니다!!!!!</a></ul>
-          <ul>09일</a> - 밀린 팬아트 보는 날</a></ul>
-          <ul>10일</a> - 월요일이왔챤</a></ul>
-          <ul>11일</a> - 4시) 키챠니아 VR 맵탐방</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4331237" target="_blank">12일</a> - 잔잔바리</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4288691" target="_blank">08일</a> - <a href="https://youtu.be/EsAhEuf0BOc" target="_blank">토요일이무니다!!!!! (프로젝트 윈터 커마 및 튜토리얼 , 이세돌 불법 단체 안무(대월향클립) , 왁굳형 ASMR , 고멤무스메(프로젝트 윈터) , 오르트구름 , 컨텐츠 짜기 , 토토 노래뱅 , 리그 오브 레전드)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4344089" target="_blank">09일</a> - <a href="https://youtu.be/7Wx9l3qJsJg" target="_blank">밀린 팬아트 보는 날▲ (딸기 싫어하는 이유 , 영양제&병원 노가리 , 밥 뺏겼어~ , 이세돌 팬게임 - 이세돌겜 , 리그 오브 레전드)(03:36:00 ~ 03:42:00 뮤트)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4344089" target="_blank">10일</a> - <a href="https://youtu.be/IkjvBrxlywU" target="_blank">월요일이왔챤 (염라 팬 MV , 예전에 녹음했던 노래들 노가리 , 왁타버스 & 이세돌 성대모사 , 오토튠 챤 , 고멤 놀이터 - 마음에 드시는 대로(히키킹) , 방종곡 - 잊혀지지 못할 언어 , 부엉이)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4344089" target="_blank">11일</a> - <a href="https://youtu.be/EsAhEuf0BOc" target="_blank">4시) 키챠니아 VR 맵탐방 (자운리그 신청 , 리그 오브 레전드 , 로스트 아크 노가리 , VRChat 맵탐방 , The F1RST TAKE맵 , 염라 , VRChat 풀트뱅 , 실로폰 냠 , 저스트 댄스 , 고병장님 마을이 하나 날아갔습니다 , 방종곡 - 그래서 나는 음악을 그만두었다)</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4331237" target="_blank">12일</a> - <a href="https://youtu.be/ZK7eN07OJCk" target="_blank">잔잔바리 (</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">14일</a> - 왕짧뱅</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">15일</a> - 왕지각대장 죄송합니다!!!!</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4400593" target="_blank">16일</a> - 오늘 태어났습니다!</ul>
