--- a/Viichan.html
+++ b/Viichan.html
@@ -138,9 +138,9 @@
           <ul><a href="https://cafe.naver.com/steamindiegame/4344089" target="_blank">11일</a> - <a href="https://youtu.be/EsAhEuf0BOc" target="_blank">4시) 키챠니아 VR 맵탐방 (자운리그 신청 , 리그 오브 레전드 , 로스트 아크 노가리 , VRChat 맵탐방 , The F1RST TAKE맵 , 염라 , VRChat 풀트뱅 , 실로폰 냠 , 저스트 댄스 , 고병장님 마을이 하나 날아갔습니다 , 방종곡 - 그래서 나는 음악을 그만두었다)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4331237" target="_blank">12일</a> - <a href="https://youtu.be/ZK7eN07OJCk" target="_blank">잔잔바리 (팬서비스 코러스 못 해준 이유 , 오디션때 1일 1즙 , 형 시참 하려고 시도했던 썰 , 오디션때 심정 , P에서 J로 바뀐 삶 , 버킷리스트 , 화음 천재들에게 좌절감을 맛본 챤 , 마네쟈의 잘자요 , 무서운 이야기 , 연애인 본 썰  , 멤버들 성대모사 , 방종곡 - 세계는 사랑에 빠져있어) </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">14일</a> - <a href="https://youtu.be/5T92gEnuEIk" target="_blank">왕짧뱅 (학교 쌘 언니들에 대한 고찰 , 미아된 썰 , 악몽&가위 눌린 썰 , 몰컴 노가리 , 게임 노가리)</a></ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">15일</a> - 왕지각대장 죄송합니다!!!!</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4377497" target="_blank">15일</a> - <a href="https://youtu.be/9uoQ5L8mEvI" target="_blank">왕지각대장 죄송합니다!!!! (왁래뱅 감상 , 사장님과 불법 듀엣 , 천성의 약함 창법의 비밀 , 롤 시네마틱 감상 , 롤 로그인 화면 월드컵 , 롤 영상 노가리 , 리그 오브 레전드 , RE:WIND 비하인드 영상 2편 감상 , 쉬는시간에 잔 썰 , 냐아아앙 따라하는 형) </a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4400593" target="_blank">16일</a> - 오늘 태어났습니다!</ul>
-          <ul><a href="https://cafe.naver.com/steamindiegame/4421943" target="_blank">18일</a> - 할 얘기가 많군요 ^-^</a></ul>
+          <ul><a href="https://cafe.naver.com/steamindiegame/4421943" target="_blank">18일</a> - <a href="https://youtu.be/QwzZBJ-0FDg" target="_blank">할 얘기가 많군요 ^-^ (뉴 아바타 공모전 관련 , 씹가리 , 겜가리 , 에이펙스 레전드 , 방종곡 - Beautiful World , 잔혹한 천사의 테제)</a></ul>
           <ul><a href="https://cafe.naver.com/steamindiegame/4409947" target="_blank">19일</a> - 특훈이닷 ଘ(੭ˊ꒳ˋ)੭✧</a></ul>
           <ul>21일</a> - 짧뱅입니닷!</a></ul>
           <ul>22일</a> - 8시) 롤 자운리그</a></ul>
