--- a/Viichan.html
+++ b/Viichan.html
@@ -322,16 +322,16 @@
        <ul><a href="https://cafe.naver.com/steamindiegame/7629984" target="_blank">14일</a> - <a href="https://youtu.be/l9cRDF953is" target="_blank">수요일이닿!!!!! (피아노 , 넥슬다이브 시청 , 표정 바리에이션 체크(귀여움) , 비챤 의상 월드컵 , GTA5) </a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7651967" target="_blank">16일</a> - <a href="https://youtu.be/r3dri1TkFx0" target="_blank">7시) 몸치들의 저스트 댄스 (피아노 , 면허 따 감상 , 면허가리(아빠 차 강탈) , 썸네일가리 , 8월 챤래뱅 플리 , 롤드컵 노래가리 , 고컬로이드 세구세구 , VRChat풀트뱅 , 저스트 댄스 , 노래뱅 4곡)</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7679885" target="_blank">17일</a> - <a href="https://youtu.be/LLEk2E0DwVg" target="_blank">고멤가요제!!!! 김피탕화이팅!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - </a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - VIICHAN STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - </a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7696585" target="_blank">18일</a> - <a href="https://youtu.be/psqd0FKQ4GY" target="_blank">9시반) VRC 조공 선물(?)받기 (VRChat 상황극 조공 - 돚거상사 , VRChat 풀트뱅 , 그냥살아! 촬영맵 탐방 , 맵 조공 - VIICHAN STUDIO , 아바타 조공 - 마린룩,개나리챤,뉴체리,그래피티룩 , 미술관 , MMD월드)</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7724268" target="_blank">20일</a> - <a href="https://youtu.be/Gf0gOlyj8us" target="_blank">VRC 풀트랑 싸우는 날</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/7727888" target="_blank">21일(업로드x)</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">모닝챤~</a></ul> 
-       <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )//</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7787674" target="_blank">24일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">마크 팬덤전쟁~!!! (･ω･)//</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7799293" target="_blank">25일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">오늘도 감사합니다~!!!!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7834367" target="_blank">27일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">6시) VRC 풀트뱅 ~!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7841502" target="_blank">28일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">많다! 할일! 짧다! 오늘!</a></ul>
-       <ul><a href="https://cafe.naver.com/steamindiegame/7881037" target="_blank">30일</a> - </a href="https://youtu.be/j4A-UsVxVLk" target="_blank">우 나 핫걸의 VR챗 탐방쓰</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7736096" target="_blank">21일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">수요일 두개재</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7767617" target="_blank">23일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">[7시] 팬덤전쟁 공듀들과 티타임 (•᷅ ʚ •᷄ )//</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7787674" target="_blank">24일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">마크 팬덤전쟁~!!! (･ω･)//</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7799293" target="_blank">25일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">오늘도 감사합니다~!!!!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7834367" target="_blank">27일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">6시) VRC 풀트뱅 ~!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7841502" target="_blank">28일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">많다! 할일! 짧다! 오늘!</a></ul>
+       <ul><a href="https://cafe.naver.com/steamindiegame/7881037" target="_blank">30일</a> - <a href="https://youtu.be/j4A-UsVxVLk" target="_blank">우 나 핫걸의 VR챗 탐방쓰</a></ul>
      
     </ul>
 
@@ -389,7 +389,7 @@
 <p><br></p>
 
 
-    <ul>11월 - </a href="" target="_blank">月刊 ゔぃちゃん 11月号</a>(다시보기 내려가는대로 업데이트 될 예정)
+    <ul>12월 - </a href="" target="_blank">月刊 ゔぃちゃん 11月号</a>(다시보기 내려가는대로 업데이트 될 예정)
        <ul><a href="https://cafe.naver.com/steamindiegame/8739297" target="_blank">02일</a> - </a href="" target="_blank">카타르 월드컵 축구 3차전 같이보기</a></ul>
        <ul><a href="https://cafe.naver.com/steamindiegame/8763598" target="_blank">04일</a> - </a href="" target="_blank">여어- 핫걸 등장입니다</a></ul>
       
